--- a/Pages/Books/Delete.cshtml
+++ b/Pages/Books/Delete.cshtml
@@ -43,7 +43,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Book.Publisher.PublisherName)
         </dd>
-
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Book.BookCategories)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Book.BookCategories)
+        </dd>
     </dl>
     
     <form method="post">
