--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int?}"
 @model Vilcu_Ana_Lab2.Pages.Categories.IndexModel
 
 @{
@@ -20,12 +20,19 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Category) {
-        <tr>
+        @foreach (var item in Model.CategoryData.Categories)
+        {
+            string selectedRow = "";
+            if (item.ID == Model.CategoryID)
+            {
+                selectedRow = "table-success";
+            }
+            <tr class="@selectedRow">
             <td>
                 @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
             <td>
+                <a asp-page="./Index" asp-route-id="@item.ID">Select</a> |
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
                 <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
@@ -34,3 +41,28 @@
 }
     </tbody>
 </table>
+
+@if (Model.CategoryData.Books != null)
+{
+    <h3>Books in Selected Category</h3>
+    <table class="table">
+        @foreach (var category in Model.CategoryData.Categories)
+        {
+            string selectedRow = category.ID == Model.CategoryID ? "table-success" : "";
+
+            <tr class="@selectedRow">
+                <td>
+                    <strong>@category.CategoryName</strong>
+                </td>
+                <td>
+                    @foreach (var bookCategory in category.BookCategories)
+                    {
+                        <div>
+                            <strong>@bookCategory.Book.Title</strong> by @bookCategory.Book.Author.Name
+                        </div>
+                    }
+                </td>
+            </tr>
+        }
+    </table>
+}
